src/styles/elements/_inpage-nav.css
/* ... */
.inpage-nav:not([ismobile]) .inpage-nav__item[active] .inpage-nav__link {
    background-color: var(--inpage-nav-link-bg-color);
}

.inpage-nav[ismobile][element-design="secondary"] .inpage-nav__item[active] .inpage-nav__link {
    --inpage-nav-link-color: var(--color-secondary-dark);
}

.inpage-nav[ismobile][element-design="inverted"] .inpage-nav__item[active] .inpage-nav__link {
    --inpage-nav-link-color: var(--color-primary);
}

@media (hover: hover) {
    .inpage-nav[ismobile] .inpage-nav__toggle:hover {
        --inpage-nav-toggle-icon-color: var(--color-primary-dark);

        cursor: pointer;
    }

    .inpage-nav[ismobile][element-design="secondary"] .inpage-nav__toggle:hover {
        --inpage-nav-toggle-icon-color: var(--color-secondary-dark);
    }

    .inpage-nav[ismobile][element-design="inverted"] .inpage-nav__toggle:hover {
        --inpage-nav-toggle-icon-color: var(--color-primary);
    }

    .button.inpage-nav__cta:hover {
        background-color: var(--inpage-nav-cta-bg-color-hover);
        color: var(--inpage-nav-cta-color-hover);
    }

    a.inpage-nav__link:hover {
        --inpage-nav-link-after-opacity: 1;

        color: var(--inpage-nav-link-color-hover);
    }

    .inpage-nav[ismobile] a.inpage-nav__link:hover {
        --inpage-nav-link-after-opacity: 0;

        color: var(--color-primary-dark);
    }

    .inpage-nav[ismobile][element-design="secondary"] .inpage-nav__link:hover {
        color: var(--color-secondary-dark);
    }

    .inpage-nav[ismobile][element-design="inverted"] .inpage-nav__link:hover {
        color: var(--color-primary);
    }

    .inpage-nav:not([ismobile], [element-design="default"]) .inpage-nav__link:hover {
        --inpage-nav-link-after-opacity: 0;
    }

    .inpage-nav:not([ismobile], [element-design="default"]) .inpage-nav__item[active] .inpage-nav__link:hover {
        color: var(--color-bg);
    }
}

